# Kivy_chat

./: main.kv  main.py  pyproject.toml  server.py
widgets/: text_field.kv
