[tool.poetry]
name = "kivypractice"
version = "0.1.0"
description = ""
authors = ["RamzeyXD <Lalalastik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.1.0"
Twisted = "^22.4.0"
kivymd = "^0.104.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
